--- a/trafficlicense/core/templates/video_feed.html
+++ b/trafficlicense/core/templates/video_feed.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Video Feed</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
     <h1>Video Feed for {{ area.name }}</h1>
-    <video src="{{ area.video.url }}" controls></video>
-</body>
-</html>
+
+    <!-- Display video or URL -->
+    {% if area.video and area.video.url %}
+        <video src="{{ area.video.url }}" controls></video>
+    {% elif area.video_url %}
+        <iframe src="{{ area.video_url }}" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+    {% else %}
+        <p>No video or URL available for this area.</p>
+    {% endif %}
+
+    <!-- Toggle button -->
+    <form method="POST" action="{% url 'toggle_video_source' area.id %}">
+        {% csrf_token %}
+        {% if area.video and area.video.url %}
+            <button type="submit" class="btn btn-primary">Switch to URL</button>
+        {% elif area.video_url %}
+            <button type="submit" class="btn btn-primary">Switch to File</button>
+        {% endif %}
+    </form>
+{% endblock %}
