--- a/trafficlicense/core/templates/area_list.html
+++ b/trafficlicense/core/templates/area_list.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Camera Areas</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
     <h1>Camera Installation Areas</h1>
     <ul>
         {% for area in areas %}
             <li><a href="{% url 'video_feed' area.id %}">{{ area.name }}</a></li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
