--- a/trafficlicense/core/templates/base.html
+++ b/trafficlicense/core/templates/base.html
@@ -49,6 +49,13 @@
         </li>
 
         <li class="nav-item">
+            <a class="nav-link text-dark" href="{% url 'all_vehicles' %}">
+              <i class="material-symbols-rounded opacity-5">table_view</i>
+              <span class="nav-link-text ms-1">DataBase</span>
+            </a>
+          </li>
+
+        <li class="nav-item">
           <a class="nav-link text-dark" href="{% url 'suspected_vehicles' %}">
             <i class="material-symbols-rounded opacity-5">table_view</i>
             <span class="nav-link-text ms-1">Suspected Vehicles</span>
