--- a/trafficlicense/core/templates/all_vehicles.html
+++ b/trafficlicense/core/templates/all_vehicles.html
@@ -1,26 +1,64 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>All Vehicles</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Plate Number</th>
-                <th>Owner</th>
-                <th>Type</th>
-                <th>Color</th>
-                <th>Details</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for vehicle in vehicles %}
-            <tr>
-                <td>{{ vehicle.plate_number }}</td>
-                <td>{{ vehicle.owner_name }}</td>
-                <td>{{ vehicle.vehicle_type }}</td>
-                <td>{{ vehicle.color }}</td>
-                <td><a href="{% url 'vehicle_details' vehicle.plate_number %}">View Details</a></td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+
+<div class="row">
+    <div class="col-12">
+      <div class="card my-4">
+        <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+          <div class="bg-gradient-dark shadow-dark border-radius-lg pt-4 pb-3">
+            <h6 class="text-white text-capitalize ps-3">All Vehicles</h6>
+          </div>
+        </div>
+        <div class="card-body px-0 pb-2">
+          <div class="table-responsive p-0">
+            <table class="table align-items-center mb-0">
+              <thead>
+                <tr>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Plate Number</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Owner</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Type</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">Color</th>
+                  <th class="text-secondary opacity-7"></th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for vehicle in vehicles %}
+                <tr>
+                    <td>
+                      <div class="d-flex px-2">
+                        <div class="my-auto">
+                          <h6 class="mb-0 text-sm">{{ vehicle.plate_number }}</h6>
+                        </div>
+                      </div>
+                    </td>
+                    <td>
+                      <p class="text-sm font-weight-bold mb-0">{{ vehicle.owner_name }}</p>
+                    </td>
+                    <td>
+                      <span class="text-xs font-weight-bold">{{ vehicle.vehicle_type }}</span>
+                    </td>
+                    <td class="align-middle text-center text-sm">
+                        <span class="badge badge-sm bg-gradient-success">{{ vehicle.color }}</span>
+                      </td>
+                      <td class="align-middle">
+                        <a href="{% url 'vehicle_details' vehicle.plate_number %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                          View Details
+                        </a>
+                    </td>
+                </tr>
+                {% endfor %}
+                
+                
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+      </div>
+    </div>
+
+
 {% endblock %}
