--- a/trafficlicense/core/templates/area_list.html
+++ b/trafficlicense/core/templates/area_list.html
@@ -1,10 +1,59 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <h1>Camera Installation Areas</h1>
-    <ul>
-        {% for area in areas %}
-            <li><a href="{% url 'video_feed' area.id %}">{{ area.name }}</a></li>
-        {% endfor %}
-    </ul>
+
+<div class="row">
+    <div class="col-12">
+      <div class="card my-4">
+        <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+          <div class="bg-gradient-dark shadow-dark border-radius-lg pt-4 pb-3">
+            <h6 class="text-white text-capitalize ps-3">Camera Installation Areas</h6>
+            <div class="ms-auto text-end">
+                <button class="btn btn-outline-primary btn-sm mb-0">View All</button>
+              </div>
+          </div>
+        </div>
+        <div class="card-body px-0 pb-2">
+          <div class="table-responsive p-0">
+            <table class="table align-items-center mb-0">
+              <thead>
+                <tr>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Name of Location</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Description</th>
+                  <th class="text-secondary opacity-7"></th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for area in areas %}
+                <tr>
+                    <td>
+                      <div class="d-flex px-2">
+                        <div class="my-auto">
+                          <h6 class="mb-0 text-sm">{{ area.name }}</h6>
+                        </div>
+                      </div>
+                    </td>
+                    <td>
+                      <p class="text-sm font-weight-bold mb-0">{{ area.description }}</p>
+                    </td>
+                      <td class="align-middle">
+                        <a href="{% url 'video_feed' area.id %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                          Live Analysis
+                        </a>
+                    </td>
+                </tr>
+                {% endfor %}
+                
+                
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+      </div>
+    </div>
+
 {% endblock %}
