--- a/trafficlicense/core/templates/suspected_vehicles.html
+++ b/trafficlicense/core/templates/suspected_vehicles.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}Suspected Vehicles{% endblock %}
 {% block content %}
 
 <div class="row">
