--- a/trafficlicense/core/templates/video_feed.html
+++ b/trafficlicense/core/templates/video_feed.html
@@ -2,6 +2,120 @@
 {% load static %}
 
 {% block content %}
+
+    <div class="row">
+        <div class="col-lg-8">
+          <div class="row">
+            
+            <div class="col-xl-12">
+              <div class="row">
+                <div class="col-md-12 col-6">
+                  <div class="card">
+                    <div class="card-header pb-0 p-3">
+                        <div class="row">
+                          <div class="col-6 d-flex align-items-center">
+                            <h6 class="mb-0">Invoices</h6>
+                          </div>
+                          <div class="col-6 text-end">
+                            <form method="POST" action="{% url 'toggle_video_source' area.id %}">
+                                {% csrf_token %}
+                                {% if area.video and area.video.url %}
+                                    <button type="submit" class="btn btn-secondary">Switch to URL</button>
+                                {% elif area.video_url %}
+                                    <button type="submit" class="btn btn-primary">Switch to File</button>
+                                {% endif %}
+                            </form>
+                          </div>
+                        </div>
+                    </div><hr>
+                    {% if area.video and area.video.url %}
+                        <video src="{{ area.video.url }}" controls></video>
+                    {% elif area.video_url %}
+                        <iframe src="{{ area.video_url }}" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+                    {% else %}
+                        <p>No video or URL available for this area.</p>
+                    {% endif %}
+                  </div>
+                </div>
+              </div>
+            </div>
+             
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card h-100">
+            <div class="card-header pb-0 p-3">
+              <div class="row">
+                <div class="col-6 d-flex align-items-center">
+                  <h6 class="mb-0">Invoices</h6>
+                </div>
+                <div class="col-6 text-end">
+                  <button class="btn btn-outline-primary btn-sm mb-0">View All</button>
+                </div>
+              </div>
+            </div>
+            <div class="card-body p-3 pb-0">
+                
+            </div>
+            <div class="card-body p-3 pb-0">
+              <ul class="list-group">
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm">March, 01, 2020</h6>
+                    <span class="text-xs">#MS-415646</span>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                    $180
+                    <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-symbols-rounded text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+                  </div>
+                </li>
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">February, 10, 2021</h6>
+                    <span class="text-xs">#RV-126749</span>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                    $250
+                    <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-symbols-rounded text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+                  </div>
+                </li>
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">April, 05, 2020</h6>
+                    <span class="text-xs">#FB-212562</span>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                    $560
+                    <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-symbols-rounded text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+                  </div>
+                </li>
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">June, 25, 2019</h6>
+                    <span class="text-xs">#QW-103578</span>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                    $120
+                    <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-symbols-rounded text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+                  </div>
+                </li>
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">March, 01, 2019</h6>
+                    <span class="text-xs">#AR-803481</span>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                    $300
+                    <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-symbols-rounded text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     <h1>Video Feed for {{ area.name }}</h1>
 
     <!-- Display video or URL -->
