--- a/trafficlicense/core/templates/video_feed.html
+++ b/trafficlicense/core/templates/video_feed.html
@@ -55,7 +55,47 @@
               </div>
             </div>
             <div class="card-body p-3 pb-0">
-                
+                <div class="card-header pb-0 p-3">
+                    <h6 class="mb-0">Detected Plates for {{ area.name }}</h6>
+                </div>
+                <div class="card-body">
+                    {% if detected_plates %}
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Plate Number</th>
+                                    <th>Classification</th>
+                                    <th>Vehicle Details</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for plate in detected_plates %}
+                                    <tr>
+                                        <td>{{ plate.plate }}</td>
+                                        <td>
+                                            {% if plate.classification == "Suspect" %}
+                                                <span class="badge bg-danger">Suspect</span>
+                                            {% elif plate.classification == "Not Suspect" %}
+                                                <span class="badge bg-success">Not Suspect</span>
+                                            {% else %}
+                                                <span class="badge bg-warning">Unknown</span>
+                                            {% endif %}
+                                        </td>
+                                        <td>
+                                            {% if plate.vehicle %}
+                                                {{ plate.vehicle.owner_name }} - {{ plate.vehicle.make }} {{ plate.vehicle.model }}
+                                            {% else %}
+                                                N/A
+                                            {% endif %}
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    {% else %}
+                        <p>No plates detected in the video.</p>
+                    {% endif %}
+                </div>
             </div>
             <div class="card-body p-3 pb-0">
               <ul class="list-group">
