--- a/trafficlicense/core/templates/add_edit_area.html
+++ b/trafficlicense/core/templates/add_edit_area.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}{% if area %}Edit Area{% else %}Add Area{% endif %}{% endblock %}
 {% block content %}
 
 <div class="row">
