--- a/trafficlicense/core/templates/add_edit_suspect_vehicle.html
+++ b/trafficlicense/core/templates/add_edit_suspect_vehicle.html
@@ -1,9 +1,25 @@
 {% extends "base.html" %}
+{% block title %}{% if suspect_vehicle %}Edit Suspect Vehicle{% else %}Add Suspect Vehicle{% endif %}{% endblock %}
 {% block content %}
-<h2>{% if suspect_vehicle %}Edit Suspect Vehicle{% else %}Add Suspect Vehicle{% endif %}</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Save</button>
-</form>
+
+<div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+      <div class="card mt-4">
+        <div class="card-header p-3">
+          <h5 class="mb-0">{% if suspect_vehicle %}Edit Suspect Vehicle{% else %}Add Suspect Vehicle{% endif %}</h5>
+        </div>
+        <div class="card-body p-3 pb-0">
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+      </div>
+
 {% endblock %}
+
