--- a/trafficlicense/core/templates/all_vehicles.html
+++ b/trafficlicense/core/templates/all_vehicles.html
@@ -8,9 +8,9 @@
         <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
           <div class="bg-gradient-dark shadow-dark border-radius-lg pt-4 pb-3">
             <h6 class="text-white text-capitalize ps-3">All Vehicles</h6>
-            <div class="ms-auto text-end">
+            <!-- <div class="ms-auto text-end">
               <a href="{% url 'add_vehicle' %}" class="btn btn-secondary btn-sm mb-0">Add Vehicle</a>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="card-body px-0 pb-2">
@@ -50,6 +50,10 @@
                         </a>
                         <a href="{% url 'edit_vehicle' vehicle.plate_number %}" class="btn btn-outline-warning font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                           Edit
+                        </a>
+
+                        <a href="{% url 'delete_vehicle' vehicle.plate_number %}" class="btn btn-outline-danger font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                          Delete
                         </a>
                     </td>
                 </tr>
