--- a/trafficlicense/core/templates/vehicle_details.html
+++ b/trafficlicense/core/templates/vehicle_details.html
@@ -209,10 +209,18 @@
             </li>
             <li class="list-group-item border-0 d-flex justify-content-between ps-0 border-radius-lg">
               <div class="d-flex flex-column">
-                <h6 class="text-dark mb-1 font-weight-bold text-sm">Police Station</h6>
+                <h6 class="text-dark mb-1 font-weight-bold text-sm">Police Station:</h6>
               </div>
               <div class="d-flex align-items-center text-sm">
                 {{ suspect_details.police_station }}
+              </div>
+            </li>
+            <li class="list-group-item border-0 d-flex justify-content-between ps-0 border-radius-lg">
+              <div class="d-flex flex-column">
+                <h6 class="text-dark mb-1 font-weight-bold text-sm">Active Status:</h6>
+              </div>
+              <div class="d-flex align-items-center text-sm">
+                {{ suspect_details.is_active }}
               </div>
             </li>
           </ul>
