--- a/trafficlicense/core/templates/area_list.html
+++ b/trafficlicense/core/templates/area_list.html
@@ -44,9 +44,9 @@
                         <a href="{% url 'edit_area' area.id %}" class="btn btn-warning font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                           Edit Location
                         </a>
-                        <a href="{% url 'delete_area' area.id %}" class="btn btn-danger font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                        <!-- <a href="{% url 'delete_area' area.id %}" class="btn btn-danger font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                           Delete Location
-                        </a>
+                        </a> -->
                     </td>
 
                 </tr>
