--- a/trafficlicense/core/templates/suspected_vehicles.html
+++ b/trafficlicense/core/templates/suspected_vehicles.html
@@ -49,9 +49,9 @@
                         <a href="{% url 'edit_vehicle' suspect.vehicle.plate_number %}" class="btn btn-warning font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                           Edit
                         </a>
-                        <a href="{% url 'delete_suspect_vehicle' suspect.vehicle.plate_number %}" class="btn btn-danger font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                        <!-- <a href="{% url 'delete_suspect_vehicle' suspect.vehicle.plate_number %}" class="btn btn-danger font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                           Delete
-                        </a>
+                        </a> -->
                     </td>
                 </tr>
                 {% endfor %}
